--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Go Trip Today Theme
 Theme URI: https://gotriptoday.com/
 Author: Mufaqar
 Author URI: https://mufaqar.com
-Description: Top Providers cusom theme for Top Providers
+Description:  Go Trip Today Theme
 Version: 1.0.2
 License: GNU General Public License 
 Text Domain: gt_theme
