--- a/style.css
+++ b/style.css
@@ -9657,3 +9657,8 @@ textarea.form-control {
 .chbs-main [class*="icon-"]:before {
   font-family: "chbs-meta-icon" !important;
 }
+.go_trip_form {
+    padding: 40px;
+    background-color: #ffffff;
+    border-radius: 18px 18px 0 0;
+}
