--- a/style.css
+++ b/style.css
@@ -9662,3 +9662,12 @@ textarea.form-control {
     background-color: #ffffff;
     border-radius: 18px 18px 0 0;
 }
+
+
+.swiper.destination-details-wrapper .swiper-slide img {
+    width: 1350px;
+    height: 500px;
+    object-fit: cover; /* Crops the image proportionally */
+    display: block;
+    margin: 0 auto; /* Centers the image */
+}
