--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ textarea:invalid {
 
 .btn-light {
   background-color: #3cb371;
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .btn-light:active,
@@ -8908,10 +8908,12 @@ textarea.form-control {
     height: 92px;
   }
 }
-#contactForm{
- box-shadow: 0 0 10px 0px #00000014;
- border-radius: 0 0 18px 18px;
+
+#contactForm {
+  box-shadow: 0 0 10px 0px #00000014;
+  border-radius: 0 0 18px 18px;
 }
+
 .contact-section .contact-form {
   padding: 40px;
   background-color: #ffffff;
@@ -9627,6 +9629,7 @@ textarea.form-control {
 .go_trip_bookingform .chbs-main .chbs-form-field {
   border: none;
 }
+
 .go_trip_bookingform .chbs-main .chbs-form-field>label {
   color: #161920;
   font-size: 14px;
@@ -9648,7 +9651,8 @@ textarea.form-control {
   background-color: #3cb371 !important;
   border-color: #3cb371 !important;
   font-size: 16px !important;
-  font-family: "Manrope", sans-serif;
+  font-weight: 700 !important;
+  font-family: "Manrope", sans-serif !important;
 }
 
 .go_trip_bookingform .chbs-button-style-1:hover {
@@ -9690,6 +9694,10 @@ textarea.form-control {
   .go_trip_Customform .field-type-submit-field {
     padding: 16px 20px !important;
     margin: auto -20px !important;
+  }
+
+  .mtn {
+    margin-top: 60px !important;
   }
 }
 
