--- a/custom.css
+++ b/custom.css
@@ -2,7 +2,9 @@
   font-family: "chbs-meta-icon-2" !important;
 }
 
-
-.chbs-main [class*="chbs-meta-icon-plus"]:before , .chbs-main [class*="chbs-meta-icon-minus"]:before {
+.chbs-main [class*="chbs-meta-icon-plus"]:before,
+.chbs-main [class*="chbs-meta-icon-minus"]:before,
+.chbs-main [class*="chbs-meta-icon-route"]:before,
+.chbs-main [class*="chbs-meta-icon-clock"]:before {
   font-family: "chbs-meta-icon" !important;
 }
