--- a/custom.css
+++ b/custom.css
@@ -5,6 +5,9 @@
 .chbs-main [class*="chbs-meta-icon-plus"]:before,
 .chbs-main [class*="chbs-meta-icon-minus"]:before,
 .chbs-main [class*="chbs-meta-icon-route"]:before,
-.chbs-main [class*="chbs-meta-icon-clock"]:before {
+.chbs-main [class*="chbs-meta-icon-clock"]:before,
+.chbs-main [class*="chbs-tooltip"]:before
+
+{
   font-family: "chbs-meta-icon" !important;
 }
