--- a/custom.css
+++ b/custom.css
@@ -552,9 +552,12 @@
 }
 
 .content .step {
-  border: 1px solid #161920;
+  border: 1px solid #d9d9d9 !important;
   border-radius: 10px;
   background-color: #f7f7f7;
   padding: 40px 36px;
   border-radius: 18px;
+
 }
+
+.step_number { font-weight: bold; background: #000; border-radius: 50%; padding: 2px 10px; color: #fff;}
