--- a/custom.css
+++ b/custom.css
@@ -557,7 +557,20 @@
   background-color: #f7f7f7;
   padding: 40px 36px;
   border-radius: 18px;
-
 }
 
-.step_number { font-weight: bold; background: #000; border-radius: 50%; padding: 2px 10px; color: #fff;}
+.step_number {
+  font-weight: bold;
+  background: #000;
+  border-radius: 50%;
+  padding: 2px 10px;
+  color: #fff;
+}
+
+.search_banner h2 {
+  color: #ffffff;
+  text-align: center;
+  font-size: 40px;
+  line-height: 1.1;
+  margin-bottom: 0.75rem;
+}
