--- a/custom.css
+++ b/custom.css
@@ -681,4 +681,7 @@
   font-weight: 500;
   color: #767676;
 }
-.hero-content h2 { font-size: 56px; max-width: 65%;}
+.hero-content h2 {
+  font-size: 56px;
+  max-width: 65%;
+}
