--- a/custom.css
+++ b/custom.css
@@ -10,7 +10,7 @@
   font-family: "chbs-meta-icon" !important;
 }
 
-/* 
+
 .go_trip_form .ui-tabs-panel {
   border-radius: 100px !important;
   padding: 10px 30px !important;
@@ -84,7 +84,7 @@
 .go_trip_form .chbs-button-widget-submit:hover {
   background-color: rgb(22, 25, 34) !important;
   color: rgb(255, 255, 255) !important;
-} */
+} 
 
 .tour_feature {
   max-height: 260px;
