--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,4 @@
-.chbs-meta-icon-2 .icon {
-  font-family: "chbs-meta-icon-2" !important;
-}
+
 
 .chbs-main [class*="chbs-meta-icon-plus"]:before,
 .chbs-main [class*="chbs-meta-icon-minus"]:before,
@@ -10,6 +8,11 @@
   font-family: "chbs-meta-icon" !important;
 }
 
+.chbs-meta-icon-2 .icon {
+  font-family: "chbs-meta-icon-2" !important;
+}
+
+[class*="icon-"]:before { font-family: "chbs-meta-icon-2" !important;}
 
 .go_trip_form .ui-tabs-panel {
   border-radius: 100px !important;
@@ -26,11 +29,11 @@
   margin-left: 20px !important;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li {
   margin: 0 !important;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li>a {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li > a {
   background-color: transparent !important;
   border-radius: 50px;
   padding: 10px 24px !important;
@@ -38,8 +41,8 @@
   position: relative;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li>a::before {
-  content: '';
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li > a::before {
+  content: "";
   width: 20px;
   height: 20px;
   background-color: #dddddd;
@@ -51,7 +54,7 @@
   transition: all ease-in-out 0.3s;
 }
 
-.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active>a::before {
+.go_trip_form .chbs-tab.ui-tabs .ui-tabs-nav > li.ui-tabs-active > a::before {
   border: 5px solid #3cb371;
 }
 
@@ -132,7 +135,13 @@
   margin-right: 12px;
 }
 
-.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-main-navigation-default>ul>li.chbs-state-selected>a>span:first-child {
+.go_trip_bookingform
+  .chbs-booking-form-id-10007
+  .chbs-main-navigation-default
+  > ul
+  > li.chbs-state-selected
+  > a
+  > span:first-child {
   background-color: #3cb371;
 }
 
@@ -144,12 +153,12 @@
   margin-bottom: 20px;
 }
 
-.go_trip_bookingform .chbs-main .chbs-tab.ui-tabs .ui-tabs-nav>li {
+.go_trip_bookingform .chbs-main .chbs-tab.ui-tabs .ui-tabs-nav > li {
   width: 50% !important;
   border-radius: 50px !important;
 }
 
-.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav>li a {
+.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav > li a {
   background-color: transparent !important;
   border: none !important;
   border-radius: 50px !important;
@@ -157,16 +166,25 @@
   font-weight: 700 !important;
 }
 
-.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active>a {
+.go_trip_bookingform .chbs-tab.ui-tabs .ui-tabs-nav > li.ui-tabs-active > a {
   background-color: #3cb371 !important;
   border-color: #3cb371 !important;
 }
 
-.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-tab.ui-tabs .ui-tabs-nav>li.ui-tabs-active+li>a {
+.go_trip_bookingform
+  .chbs-booking-form-id-10007
+  .chbs-tab.ui-tabs
+  .ui-tabs-nav
+  > li.ui-tabs-active
+  + li
+  > a {
   border: none !important;
 }
 
-.go_trip_bookingform .chbs-booking-form-id-10007 .chbs-tab.ui-tabs .ui-tabs-panel {
+.go_trip_bookingform
+  .chbs-booking-form-id-10007
+  .chbs-tab.ui-tabs
+  .ui-tabs-panel {
   border: none !important;
 }
 
@@ -187,7 +205,7 @@
   border: none;
 }
 
-.go_trip_bookingform .chbs-main .chbs-form-field>label {
+.go_trip_bookingform .chbs-main .chbs-form-field > label {
   color: #161920;
   font-size: 14px;
   font-weight: 600;
@@ -244,7 +262,11 @@
     padding-bottom: 15px !important;
   }
 
-  .go_trip_form .chbs-main.chbs-widget.chbs-widget-style-4 .chbs-main-content-step-1>div+div {
+  .go_trip_form
+    .chbs-main.chbs-widget.chbs-widget-style-4
+    .chbs-main-content-step-1
+    > div
+    + div {
     text-align: left !important;
   }
 
@@ -260,9 +282,6 @@
 
 /*Plugin Setting*/
 
-.chbs-main [class*="icon-"]:before {
-  font-family: "chbs-meta-icon-2" !important;
-}
 
 .go_trip_Customform {
   background-color: #ffffff !important;
@@ -308,11 +327,15 @@
 
 .go_trip_Customform .jet-form-builder__field.jet-form-builder-repeater,
 .go_trip_Customform .jet-form-builder-repeater__row,
-.go_trip_Customform .jet-form-builder-repeater__row-fields .jet-form-builder-row {
+.go_trip_Customform
+  .jet-form-builder-repeater__row-fields
+  .jet-form-builder-row {
   padding: 0;
 }
 
-.go_trip_Customform .jet-form-builder-repeater__row-fields :where(.wp-block-columns) {
+.go_trip_Customform
+  .jet-form-builder-repeater__row-fields
+  :where(.wp-block-columns) {
   margin-bottom: 0;
 }
 
